// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Review Component is Auth 1`] = `
<section
  className="movie-card movie-card--full"
>
  <div
    className="movie-card__header"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Test film"
        src="/some/bg.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <nav
        className="breadcrumbs"
      >
        <ul
          className="breadcrumbs__list"
        >
          <li
            className="breadcrumbs__item"
          >
            <a
              className="breadcrumbs__link"
              href="/films/2"
              onClick={[Function]}
            >
              Test film
            </a>
          </li>
          <li
            className="breadcrumbs__item"
          >
            <a
              className="breadcrumbs__link"
              href="/"
              onClick={[Function]}
            >
              Add review
            </a>
          </li>
        </ul>
      </nav>
      
      <div
        className="user-block"
      >
        <div
          className="user-block__avatar"
        >
          <a
            href="/mylist"
            onClick={[Function]}
          >
            <img
              alt="User avatar"
              height="63"
              src="/img/avatar.jpg"
              width="63"
            />
          </a>
        </div>
      </div>
    </header>
    <div
      className="movie-card__poster movie-card__poster--small"
    >
      <img
        alt="The Grand Budapest Hotel poster"
        height="327"
        src="/some/poster.jpg"
        width="218"
      />
    </div>
  </div>
  <div
    className="add-review"
  >
    
    <form
      action="#"
      className="add-review__form"
    >
      <fieldset
        disabled={false}
      >
        <div
          className="rating"
        >
          <div
            className="rating__stars"
          >
            <input
              className="rating__input"
              defaultChecked={true}
              defaultValue={1}
              id="star-0"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-0"
            >
              Rating 1
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={2}
              id="star-1"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-1"
            >
              Rating 2
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={3}
              id="star-2"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-2"
            >
              Rating 3
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={4}
              id="star-3"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-3"
            >
              Rating 4
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={5}
              id="star-4"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-4"
            >
              Rating 5
            </label>
          </div>
        </div>
        <div
          className="add-review__text"
        >
          <textarea
            className="add-review__textarea"
            id="review-text"
            name="review-text"
            onChange={[Function]}
            placeholder="Review text"
          />
          <div
            className="add-review__submit"
          >
            <button
              className="add-review__btn"
              disabled={true}
              onClick={[Function]}
              type="submit"
            >
              Post
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</section>
`;

exports[`Render Review Component is No Auth 1`] = `
<section
  className="movie-card movie-card--full"
>
  <div
    className="movie-card__header"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Test film"
        src="/some/bg.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <nav
        className="breadcrumbs"
      >
        <ul
          className="breadcrumbs__list"
        >
          <li
            className="breadcrumbs__item"
          >
            <a
              className="breadcrumbs__link"
              href="/films/2"
              onClick={[Function]}
            >
              Test film
            </a>
          </li>
          <li
            className="breadcrumbs__item"
          >
            <a
              className="breadcrumbs__link"
              href="/"
              onClick={[Function]}
            >
              Add review
            </a>
          </li>
        </ul>
      </nav>
      
      <div
        className="user-block"
      >
        <a
          className="user-block__link"
          href="/login"
          onClick={[Function]}
        >
          Sign in
        </a>
      </div>
    </header>
    <div
      className="movie-card__poster movie-card__poster--small"
    >
      <img
        alt="The Grand Budapest Hotel poster"
        height="327"
        src="/some/poster.jpg"
        width="218"
      />
    </div>
  </div>
  <div
    className="add-review"
  >
    
    <form
      action="#"
      className="add-review__form"
    >
      <fieldset
        disabled={false}
      >
        <div
          className="rating"
        >
          <div
            className="rating__stars"
          >
            <input
              className="rating__input"
              defaultChecked={true}
              defaultValue={1}
              id="star-0"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-0"
            >
              Rating 1
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={2}
              id="star-1"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-1"
            >
              Rating 2
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={3}
              id="star-2"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-2"
            >
              Rating 3
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={4}
              id="star-3"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-3"
            >
              Rating 4
            </label>
            <input
              className="rating__input"
              defaultChecked={false}
              defaultValue={5}
              id="star-4"
              name="rating"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="rating__label"
              htmlFor="star-4"
            >
              Rating 5
            </label>
          </div>
        </div>
        <div
          className="add-review__text"
        >
          <textarea
            className="add-review__textarea"
            id="review-text"
            name="review-text"
            onChange={[Function]}
            placeholder="Review text"
          />
          <div
            className="add-review__submit"
          >
            <button
              className="add-review__btn"
              disabled={true}
              onClick={[Function]}
              type="submit"
            >
              Post
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</section>
`;
